--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/thekos0596/goit-js-hw-09.git",
+  "homepage": "https://github.com/thekos0596/goit-js-hw-09",
   "scripts": {
     "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
